<resources>
    <string name="app_name">Столовка ТХЛ</string>
    <string name="title_history">История</string>
    <string name="title_main">Главная</string>
    <string name="title_user">Пользователь</string>
    <string name="desc_time_icon">time icon</string>
    <string name="example_meal_info_time">Время: 11:35 - 12:00</string>
    <string name="label_meal_info_menu">Меню:</string>
    <string name="example_meal_info_menu_list">○ Котлета мясная (80г)\n○ Пюре картофельное (200г)\n○ Морс (200мл)\n○ Пирожок с яблоком (100г)</string>
    <string name="desc_menu_icon">menu icon</string>
    <string name="desc_caloric_icon">caloric icon</string>
    <string name="example_meal_info_caloric">Калорийность: 700кКал</string>
    <string name="desc_price_icon">price icon</string>
    <string name="example_meal_info_price">Стоимость: 120 руб.</string>
    <string name="label_will_eat">Буду есть</string>
</resources>